apps/base/media/sabnzbd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sabnzbd
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      containers:
      - name: sabnzbd
        image: lscr.io/linuxserver/sabnzbd:5.1.3

        securityContext:
          allowPrivilegeEscalation: false

        resources:
          requests:
            memory: "512Mi"
            cpu: "100m"
          limits:
            memory: "2Gi"
            cpu: "1000m"

        ports:
        - containerPort: 8080
        volumeMounts:
        - name: downloads
          mountPath: /data/usenet
          subPath: usenet
        - name: config
          mountPath: /config
      volumes:
      - name: downloads
        persistentVolumeClaim:
          claimName: media-data
      - name: config
        persistentVolumeClaim:
          claimName: sabnzbd-config
