apps/base/media/sabnzbd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
spec:
  selector:
    app: sabnzbd
  ports:
  - port: 8080
    targetPort: 8080
  type: NodePort
